# binfootprint

./: flake.nix  pyproject.toml
binfootprint/: binfootprint.py
